Some correction in heading

--- a/practice_dom.html
+++ b/practice_dom.html
@@ -23,7 +23,7 @@
       font-weight: bold;
       letter-spacing: 1.1px;
       margin-bottom: 30px;
-      padding-bottom: 5px;
+      padding-bottom: 5px; 
       display: inline-block;
       border-bottom: solid 2px #757575;
     }
@@ -59,10 +59,10 @@
 </head>
 <body>
   <div class="container">
-    <h1>Add key skills in the list</h1>
+    <h1>Make your interest list</h1>
          <div class="shoping-list">
       <div class="form-group form-inline">
-        <input type="text" class="form-control" placeholder="Enter Your Skill">
+        <input type="text" class="form-control" placeholder="Add your interests">
         <button class="btn btn-primary">Submit</button>
       </div>
       <ul class="list-group font-weight-bold"> 
